# usb-if-cv-suite-automator

./: .gitignore  README.md  cv_suite_automation.py  json_encoder.py  organizer.py  phidget_board.py  pyproject.toml  requirements.txt  roadmap.md  setup.py  start_cv_suite_session.bat  summary_template.json  toggle_windows_version.ps1  windows_usb.py  windows_usb_og.py
.github/workflows/: ci.yml
scripts/: autostart.ps1  autostart_cv_suite_testing.bat  create_shortcut.ps1  debug_startup_canary.bat  launch_in_terminal.bat  open_terminal.bat  run_automation.bat  setup_environment.bat  start_cv_suite_session.bat  system_setup.bat  task_scheduler_launcher.bat  toggle_windows_version.ps1
src/: core.py  summary_template.json
src/cv_suite_automator/: __main__.py  core.py  utils.py
src/cv_suite_automator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/cv_suite_automator/usb_tool/: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  update_sudoersd.sh  usb_tool_sudoers
src/cv_suite_automator/usb_tool/examples/: autolock_windows.py  poll_usb.py  poll_usb_mac.py  test_usb.py
src/cv_suite_automator/usb_tool/usb_tool/: __init__.py  cross_usb.py  linux_usb.py  mac_usb.py  poke_device.py  update.py  windows_usb.py
src/cv_suite_automator/usb_tool/wheels/: pkg_about-1.2.9-py3-none-any.whl
tests/: test_utils.py
wheels/: MouseInfo-0.1.3-py3-none-any.whl  PyAutoGUI-0.9.54-py3-none-any.whl  PyGetWindow-0.0.9-py3-none-any.whl  PyMsgBox-1.0.9-py3-none-any.whl  PyRect-0.2.0-py2.py3-none-any.whl  PyScreeze-1.0.1-py3-none-any.whl  libusb-1.0.27.post4-py3-none-any.whl  mistune-3.1.0-py3-none-any.whl  nbconvert-7.16.5-py3-none-any.whl  phidget22-1.22.20250106-py3-none-win_amd64.whl  phidget22-1.22.20250714-py3-none-win_amd64.whl  pip_tools-7.4.1-py3-none-any.whl  pyperclip-1.9.0-py3-none-any.whl  pytweening-1.2.0-py3-none-any.whl  pyzmq-26.2.0-cp312-cp312-win_amd64.whl  usb_tool-0.1.8-py3-none-any.whl  your_package_name-0.1.0-py3-none-any.whl
